# hs-cstruct

./: .gitignore  README.md  cstruct.cabal  stack.yaml
src/CStruct/: Foreign.hs  Internal.hs  Types.hs  UArray.hs
