name:                cstruct
version:             0.1
synopsis:            Modular Efficient and Safe CStruct
description:
    Efficient CStruct overlay definition in haskell using
    type literals and type family.
homepage:            https://github.com/vincenthz/hs-cstruct#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent@snarc.org
copyright:           2017 Vincent Hanquez
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CStruct.Types
                       CStruct.Foreign
                       CStruct.UArray
  other-modules:       CStruct.Internal
  default-language:    Haskell2010
  Build-depends:       foundation
  if impl(ghc >= 8.0)
    Build-depends:     base
                     , ghc-prim
    Buildable:         True
  else
    Buildable:         False

test-suite cstruct-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  if impl(ghc >= 8.0)
    Build-depends:     base
                     , cstruct
    Buildable:         True
  else
    Buildable:         False
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vincenthz/hs-cstruct
